bootstrap導入　各ページ画面作成

--- a/app/assets/stylesheets/homes.scss
+++ b/app/assets/stylesheets/homes.scss
@@ -14,7 +14,7 @@ sub-title {
   height: 100%;
   width: 100%;
   display: table;
-  background-image: url(<%= asset_path('top.jpg') %>)
+  background-image: url(/assets/home.jpg);
   background-color:rgba(255,255,255,0.4);
   background-blend-mode:lighten;
   background-size: 100% 100%;
