--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,3 +1,17 @@
+@import "./homes";
+@import "./posts";
+
+html,
+body {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+.profiler-results {
+  display: none;
+}
 
 // header
 header {
@@ -14,6 +28,7 @@ header div:last-child {
 }
 
 header div {
+  display: inline-block;
   margin-left: 30px;
   line-height: 30px;
 }
@@ -29,14 +44,3 @@ a:hover {
 }
 
 
-html,
-body {
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  padding: 0;
-}
-
-.profiler-results {
-  display: none;
-}
