--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -8,11 +8,13 @@
       <div class="one-post">
         <%= link_to post_path(post) do %>
         <p class="caption">ユーザ名</p>
-        <%# <%= attachment_image_tag post, :image, format: 'jpeg', size: '300x200' %> %>
+        <%= attachment_image_tag post, :image, format: 'jpeg', size: '300x200' %>
         <p class="caption"><%= post.location %></p>
+        <p class="caption"><%= "#{post.comments.count} コメント" %></p>
         <% end %>
       </div>
       <% end %>
     </div>
+    <%= paginate @posts %>
   </div>
 </div>
