--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,8 +33,10 @@
         <div>
           <%= link_to "投稿一覧", posts_path, class: "text-white" %>
         </div>
-        <div><%= link_to "ユーザー", users_path, class: "text-white" %></div>
-          <div><%= link_to "マイページ", user_path(current_user.id), class: "text-white" %>
+        <div>
+          <%= link_to "ユーザー", users_path, class: "text-white" %>
+        </div>
+        <div><%= link_to "マイページ", user_path(current_user.id), class: "text-white" %>
         </div>
         <div>
           <%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: "text-white" %>
