--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -6,7 +6,7 @@
     <div class="d-flex">
     <div class="row justify-content-center d-block">
       <p class="caption">ユーザ名</p>
-      <%= attachment_image_tag @post, :image, format: 'jpeg', size: "450x350" %><br>
+      <%# <%= attachment_image_tag @post, :image, format: 'jpeg', size: "450x350" %><br> %>
       <p class="caption"><%= @post.location %>
         <% if @post.favorited_by?(current_user) %>
         <%= link_to post_favorites_path(@post), method: :delete, class: "favorite_btn" do %>
@@ -32,19 +32,19 @@
         <% end %>
 
         <p>コメント件数：<%= @comments.count %></p>
-          <% @comments.each do |comment| %>
+        <% @comments.each do |comment| %>
 	  <div class="comments-index mb-2">
           <%= comment.user.name %>
           <%= comment.created_at.strftime('%Y/%m/%d') %><br>
-          <div class="d-flex">
+      <div class="d-flex">
             <%= comment.comment %>
             <% if comment.user == current_user %>
             <div class="comment-delete">
               <%= link_to "削除", post_comment_path(comment.post, comment), method: :delete, class: "btn-sm btn-danger" %>
             </div>
+            <% end %>
           </div>
         </div>
-        <% end %>
         <% end %>
         <%= paginate @comments %>
       </div>
