--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -17,8 +17,8 @@
       <% else %>
       <%= link_to 'フォローする', user_relationships_path(@user.id), method: :POST, class:"btn-sm btn-success" %>
       <% end %>
+      <% end %>
     </p>
-    <% end %>
     <div class="ml-3 mb-3 card w-100">
     <div class="d-flex">
       <%# <%= attachment_image_tag @user, :profile_image, size: '100x100', fallback: "no_image.png", class: "mb-3 profile-img" %> %>
@@ -37,7 +37,7 @@
       <% @posts.each do |post| %>
       <div class="one-post">
         <%= link_to post_path(post) do %>
-        <%= attachment_image_tag post, :image, format: 'jpeg', size: '200x133' %>
+        <%# <%= attachment_image_tag post, :image, format: 'jpeg', size: '200x133' %> %>
         <p class="caption mb-0"><%= post.location %></p>
         <p class="caption"><%= "#{post.comments.count} コメント" %></p>
         <% end %>
