--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -8,7 +8,7 @@
       <p class="caption">ユーザ名</p>
       <%# <%= attachment_image_tag @post, :image, format: 'jpeg', size: "450x350" %><br> %>
       <p class="caption"><%= @post.location %>
-        <% if @post.favorited_by?(current_user) %>
+        <% if current_user && @post.favorited_by?(current_user) %>
         <%= link_to post_favorites_path(@post), method: :delete, class: "favorite_btn" do %>
           ♥<%= @post.favorites.count %> いいね
         <% end %>
