--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -15,7 +15,7 @@
       </div>
       <div class="form-group">
         <label class="form-label">画像</label><br>
-        <%= f.attachment_field :image %>
+        <%= f.attachment_field :post_images_images, multiple: true %>
       </div>
       <%= f.submit '投稿する', class: "btn btn-success" %>
       <% end %>
