--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -6,8 +6,10 @@
     <div class="d-flex">
     <div class="row justify-content-center d-block">
       <p class="caption">ユーザ名</p>
-      <%# <%= attachment_image_tag @post, :image, format: 'jpeg', size: "450x350" %><br> %>
-      <p class="caption"><%= @post.location %>
+      <% @post.post_images.each do |image| %>
+        <%= attachment_image_tag image, :image, format: 'jpeg', size: '200x133' %>
+      <% end %>      
+  <p class="caption"><%= @post.location %>
         <% if current_user && @post.favorited_by?(current_user) %>
         <%= link_to post_favorites_path(@post), method: :delete, class: "favorite_btn" do %>
           ♥<%= @post.favorites.count %> いいね
