--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -21,7 +21,7 @@
     </p>
     <div class="ml-3 mb-3 card w-100">
     <div class="d-flex">
-      <%# <%= attachment_image_tag @user, :profile_image, size: '100x100', fallback: "no_image.png", class: "mb-3 profile-img" %> %>
+      <%= attachment_image_tag @user, :profile_image, size: '100x100', fallback: "no_image.png", class: "mb-3 profile-img" %>
       <h4 class="ml-3 mb-3 card w-100"><%= @user.profile %></h4>
     </div>
      <div class="d-flex">
@@ -37,7 +37,9 @@
       <% @posts.each do |post| %>
       <div class="one-post">
         <%= link_to post_path(post) do %>
-        <%# <%= attachment_image_tag post, :image, format: 'jpeg', size: '200x133' %> %>
+          <% post.post_images.first(1).each do |image| %>
+            <%= attachment_image_tag image, :image, format: 'jpeg', size: '200x133' %>
+          <% end %>
         <p class="caption mb-0"><%= post.location %></p>
         <p class="caption"><%= "#{post.comments.count} コメント" %></p>
         <% end %>
