--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -3,6 +3,14 @@
     <div class="row justify-content-center">
       <h1 class="font-weight-normal mt-5 mb-5">旅行投稿編集</h1>
     </div>
+    <% if @post.errors.any? %>
+      <div class="card text-center card text-white bg-danger mb-3">
+        <%= @post.errors.count %>件のエラーが発生しました
+        <% @post.errors.full_messages.each do |message| %>
+          <%= message %>
+        <% end %>
+      </div>
+    <% end %>
     <div class="row justify-content-center">
       <%= form_with model: @post, url:"/posts/#{@post.id}", local:true do |f| %>
       <div class="form-group">
@@ -15,7 +23,7 @@
       </div>
       <div class="form-group">
         <label class="form-label">画像</label><br>
-        <%= f.attachment_field :image %>
+        <%= f.attachment_field :post_images_images, multiple: true %>
       </div>
       <%= f.submit '保存する', class: "btn btn-success" %><br>
       <%= link_to '投稿詳細ページへ', post_path(@post), class: "btn btn-dark mt-3" %>
