--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -3,6 +3,14 @@
     <div class="row justify-content-center">
       <h1 class="font-weight-normal mt-5 mb-5">旅行投稿詳細</h1>
     </div>
+    <% if @comment.errors.any? %>
+      <div class="card text-center card text-white bg-danger mb-3">
+      <%= @comment.errors.count %>件のエラーが発生しました
+      <% @comment.errors.full_messages.each do |message| %>
+      <%= message %>
+      <% end %>
+      </div>
+    <% end %>
     <div class="d-flex">
     <div class="row justify-content-center d-block">
       <p class="caption">ユーザ名</p>
@@ -22,10 +30,11 @@
     </p>
       <h2>感想</h2>
       <p id="text"><%= @post.text %></p>
-      <%= link_to '編集する', edit_post_path(@post.id), class: "btn btn-info mr-3" %>
-      <%= link_to '削除する', post_path(@post.id),method: :delete, "data-confirm"=>"本当に消しますか？", class: "btn btn-danger" %><br>
-      <%= link_to '投稿一覧ページへ', posts_path, class: "btn btn-dark mt-3" %>
-    </div>
+      <% if @post.user == current_user %>
+        <%= link_to '編集する', edit_post_path(@post.id), class: "btn btn-info mr-3" %>
+        <%= link_to '削除する', post_path(@post.id),method: :delete, "data-confirm"=>"本当に消しますか？", class: "btn btn-danger mr-3" %>
+      <% end %>
+      <%= link_to '投稿一覧ページへ', posts_path, class: "btn btn-dark" %>    </div>
 
     <div class="comments ml-5 mt-5">
         <%= form_with(model:[@post, @comment], local: true) do |f| %>
