--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,13 +11,9 @@
       <% if user_signed_in? && @user == current_user %>
       <%= link_to "プロフィール編集", edit_user_path(@user), class: "btn-sm btn-success" %>
       <% end %>
-      <% if current_user != @user %>
-      <% if current_user.following?(@user) %>
-      <%= link_to 'フォロー外す', user_relationships_path(@user.id), method: :delete, class: "btn-sm btn-danger" %>
-      <% else %>
-      <%= link_to 'フォローする', user_relationships_path(@user.id), method: :POST, class:"btn-sm btn-success" %>
-      <% end %>
-      <% end %>
+      <div id="relationship_btn_<%= @user.id %>">
+          <%= render "relationships/relationship", user: @user %>
+      </div>
     </p>
     <div class="ml-3 mb-3 card w-100">
     <div class="d-flex">
