update:エラーメッセージの日本語化

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -5,6 +5,14 @@
     </div>
     <div class="row justify-content-center">
       <%= form_with model: @user, local:true do |f| %>
+      <% if @user.errors.any? %>
+        <div class="card text-center card text-white bg-danger mb-3">
+        <%= @user.errors.count %>件のエラーが発生しました
+        <% @user.errors.full_messages.each do |message| %>
+        <%= message %>
+        <% end %>
+        </div>
+      <% end %>
       <div class="form-group">
         <label class="form-label">名前</label>
         <%= f.text_field :name, autofocus: true, id:"inputName", placeholder:"名前", class: "form-control" %>
