--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -7,7 +7,7 @@
       <% @posts.each do |post| %>
       <div class="one-post">
         <%= link_to post_path(post) do %>
-        <p class="caption">ユーザ名</p>
+        <p class="caption"><%= post.user.name %></p> 
           <% post.post_images.first(1).each do |image| %>
             <%= attachment_image_tag image, :image, format: 'jpeg', size: '200x133' %>
           <% end %>
