--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -18,6 +18,10 @@
         <%= f.text_field :location, class: "form-control" %>
       </div>
       <div class="form-group">
+        <label class="form-label">住所</label>
+        <%= f.text_field :address, class: "form-control" %>
+      </div>
+      <div class="form-group">
         <label class="form-label">感想</label>
         <%=f.text_area :text, rows: 10, class: "form-control" %>
       </div>
