--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+    <script src="https://kit.fontawesome.com/d40f72d351.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
@@ -21,28 +22,48 @@
   <body>
     <% if user_signed_in? %>
       <header>
-        <div>
-          <%= link_to root_path do %>
-            <img src="/assets/logo.png" alt="logo" id="logo">
-          <% end %>
-        </div>
-        <div>
-          <%= link_to "トップ", root_path, class: "text-white" %>
-        </div>
-        <div>
-          <%= link_to "投稿する", new_post_path, class: "text-white" %>
-        </div>
-        <div>
-          <%= link_to "投稿一覧", posts_path, class: "text-white" %>
-        </div>
-        <div>
-          <%= link_to "ユーザー", users_path, class: "text-white" %>
-        </div>
-        <div><%= link_to "マイページ", user_path(current_user.id), class: "text-white" %>
-        </div>
-        <div>
-          <%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: "text-white" %>
-        </div>
+      <nav class="bottom-nav">
+      <ul class="fixed-bottom w-100 shadow-lg list-unstyled list-group list-group-horizontal text-center">
+      <button class="mx-auto list-group-item list-group-item-action">
+        <%= link_to new_post_path do %>
+         <p><i class="fa-solid fa-pen-to-square fa-2xl"></i></p>
+        <% end %>
+      </button>
+      <button class="mx-auto list-group-item list-group-item-action">
+        <%= link_to posts_path do %>
+        <p><i class="fa-solid fa-table-cells fa-2xl" style="color: #005eff;"></i></p>
+        <% end %>
+      </button>
+      <button class="mx-auto list-group-item list-group-item-action">
+        <%= link_to users_path do %>
+        <p><i class="fa-solid fa-users fa-2xl" style="color: #005eff;"></i><p>
+        <% end %>
+      </button>
+      <button class="mx-auto list-group-item list-group-item-action">
+        <%= link_to user_path(current_user.id) do %>
+        <p><i class="fa-solid fa-user fa-2xl" style="color: #005eff;"></i></p>
+        <% end %>
+      </button>
+            <button class="mx-auto list-group-item list-group-item-action">
+        <%= link_to destroy_user_session_path, method: :delete do %>
+        <p><i class="fa-solid fa-right-from-bracket fa-2xl" style="color: #005eff;"></i></p>
+        <% end %>
+      </button>     
+    </ul>
+    </nav>
+
+
+
+      <nav class="top-nav">
+	<ul>
+		<li class="home"><%= link_to "One Trip", root_path, class: "text-white" %></li>
+		<li><%= link_to "投稿する", new_post_path, class: "text-white" %></li>
+		<li><%= link_to "投稿一覧", posts_path, class: "text-white" %></li>
+		<li><%= link_to "ユーザー", users_path, class: "text-white" %></li>
+		<li><%= link_to "マイページ", user_path(current_user.id), class: "text-white" %></li>
+    <li><%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: "text-white" %></li>
+	</ul>
+</nav>
       </header>
 
     <% end %>
