--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,35 +1,37 @@
 <div class="cover-new">
   <div class="container">
     <div class="row justify-content-center">
-      <h1 class="font-weight-normal mt-3">旅行新規投稿</h1>
+      <h1 class="font-weight-normal mt-3">新規投稿</h1>
     </div>
     <div class="row justify-content-center">
       <%= form_with model: @post, url:'/posts', local:true do |f| %>
-      <% if @post.errors.any? %>
-        <div class="card text-center card text-white bg-danger mb-3">
-        <%= @post.errors.count %>件のエラーが発生しました
-        <% @post.errors.full_messages.each do |message| %>
-        <%= message %>
+        <% if @post.errors.any? %>
+          <div class="errors text-white bg-danger mb-3">
+            <ul>
+              <li><%= @post.errors.count %>件のエラーが発生しました</li>
+              <% @post.errors.full_messages.each do |message| %>
+              <li><%= message %></li>
+              <% end %>
+            </ul>
+          </div>
         <% end %>
+        <div class="form-group">
+          <label class="form-label">旅行先</label>
+          <%= f.text_field :location, class: "form-control" %>
         </div>
-      <% end %>
-      <div class="form-group">
-        <label class="form-label">旅行先</label>
-        <%= f.text_field :location, class: "form-control" %>
-      </div>
-      <div class="form-group">
-        <label class="form-label">住所</label>
-        <%= f.text_field :address, class: "form-control" %>
-      </div>
-      <div class="form-group">
-        <label class="form-label">感想</label>
-        <%=f.text_area :text, rows: 10, class: "form-control" %>
-      </div>
-      <div class="form-group">
-        <label class="form-label">画像</label><br>
-        <%= f.attachment_field :post_images_images, multiple: true %>
-      </div>
-      <%= f.submit '投稿する', class: "btn btn-success" %>
+        <div class="form-group">
+          <label class="form-label">住所</label>
+          <%= f.text_field :address, class: "form-control" %>
+        </div>
+        <div class="form-group">
+          <label class="form-label">感想</label>
+          <%=f.text_area :text, rows: 10, class: "form-control" %>
+        </div>
+        <div class="form-group">
+          <label class="form-label">画像</label><br>
+          <%= f.attachment_field :post_images_images, multiple: true %>
+        </div>
+        <%= f.submit '投稿する', class: "btn btn-success" %>
       <% end %>
     </div>
   </div>
