--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -43,6 +43,7 @@ h1 {
   background-color: rgba(255, 255, 255, 0.4);
   background-blend-mode: lighten;
   background-size: 100% 100%;
+  overflow: auto;
 }
 
 .one-post {
@@ -50,13 +51,14 @@ h1 {
 }
 
 .one-post img:hover {
-  transform: scale(1.2,1.2);
+  transform: scale(1.1,1.1);
 }
 
 .caption {
   color: black;
   font-size: 20px;
   text-decoration: none;
+  margin: 1px;
 }
 
 
@@ -85,26 +87,10 @@ h1 {
   background-size: 100% 100%;
 }
 
-.page a,
-.next a,
-.last a,
-.first a,
-.prev a {
-  color: black;
-  margin-left: 10px;
-  margin-right: 10px;
-}
-
-.page a:hover,
-.next a:hover,
-.last a:hover,
-.first a:hover,
-.prev a:hover {
-  color: black;
-}
-
-.current {
-  font-weight: bold;
+// ページネーション
+.pagination {
+  justify-content: center;
+  margin-top: 30px;
 }
 
 // コメント機能
