--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -5,18 +5,19 @@
     </div>
     <div class="row justify-content-center">
       <% @posts.each do |post| %>
-      <div class="one-post">
-        <%= link_to post_path(post) do %>
-        <p class="caption"><%= post.user.name %></p> 
-          <% post.post_images.first(1).each do |image| %>
+        <div class="one-post mt-3">
+          <%= link_to post_path(post) do %>
+            <p class="caption"><%= post.user.name %></p> 
+            <% post.post_images.first(1).each do |image| %>
             <%= attachment_image_tag image, :image, format: 'jpeg', size: '200x133' %>
+            <% end %>
+            <p class="caption"><%= post.location %></p>
+            <p class="caption"><%= "#{post.favorites.count} いいね" %></p>
+            <p class="caption"><%= "#{post.comments.count} コメント" %></p>
           <% end %>
-        <p class="caption"><%= post.location %></p>
-        <p class="caption"><%= "#{post.comments.count} コメント" %></p>
-        <% end %>
-      </div>
+        </div>
       <% end %>
     </div>
-    <%= paginate @posts %>
+    <%= paginate @posts, theme: 'twitter-bootstrap-4' %>
   </div>
 </div>
