--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -2,6 +2,7 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
 
+// マイページ
 .cover-user-show {
   height: 100%;
   width: 100%;
@@ -9,6 +10,12 @@
   background-color: rgba(255, 255, 255, 0.4);
   background-blend-mode: lighten;
   background-size: 100% 100%;
+  overflow: auto;
+
+  h4 {
+    font-size: 20px;
+    border: none;
+  }
 }
 
 // ユーザー覧
