--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -54,6 +54,7 @@ function markerEvent(i) {
   });
 }
 
+
 // リストに追加する
 function addPost(location, lat, lng, number){
   var li = $('<li>', {
@@ -145,9 +146,11 @@ function search() {
 </script>
 
 <div class="cover-show">
-  <div class="container">
+  <div class="container justify-content-center">
     <div class="row justify-content-center">
-      <h1 class="font-weight-normal mt-5 mb-5">旅行投稿詳細</h1>
+      <h1 class="font-weight-normal mt-5 mb-5">
+      <p class="caption"><%= @post.location %>
+      </h1>
     </div>
     <% if @comment.errors.any? %>
       <div class="card text-center card text-white bg-danger mb-3">
@@ -158,26 +161,31 @@ function search() {
       </div>
     <% end %>
     <div class="d-flex">
-    <div class="row justify-content-center d-block">
-      <p class="caption">ユーザ名</p>
+      <div class="row justify-content-center d-block">
+          <p class="caption justify-content-start"><%= @post.user.name %></p>
+        <div class="d-flex justify-content-end mb-3 mr-1">
+            <% if @post.user == current_user %>
+              <%= link_to '編集する', edit_post_path(@post.id), class: "btn btn-info mr-3" %>
+              <%= link_to '削除する', post_path(@post.id),method: :delete, "data-confirm"=>"本当に消しますか？", class: "btn btn-danger mr-3" %>
+            <% end %>
+            <%= link_to '投稿一覧ページへ', posts_path, class: "btn btn-dark" %>
+        </div>
+
+      <div class="justify-content-between ml-1">
       <% @post.post_images.each do |image| %>
-        <%= attachment_image_tag image, :image, format: 'jpeg', size: '200x133' %>
+        <%= attachment_image_tag image, :image, format: 'jpeg', size: '190x133' %>
       <% end %>      
-      <p class="caption"><%= @post.location %>
+      </div>
       <div id="favorite_btn_<%= @post.id %>">
         <%= render 'favorites/favorite', post: @post %>
       </div>
       </p>
+      <div class="text ml-1">
       <h2>感想</h2>
       <p id="text"><%= @post.text %></p>
-      <% if @post.user == current_user %>
-        <%= link_to '編集する', edit_post_path(@post.id), class: "btn btn-info mr-3" %>
-        <%= link_to '削除する', post_path(@post.id),method: :delete, "data-confirm"=>"本当に消しますか？", class: "btn btn-danger mr-3" %>
-      <% end %>
-      <%= link_to '投稿一覧ページへ', posts_path, class: "btn btn-dark" %>    </div>
-
-    <div class="comments ml-5 mt-5">
-
+      </div>
+<div class="map-comments row">
+<div class="map col ml-1 mb-3">
       <div id = 'map_index'></div>
         <script src="https://maps.googleapis.com/maps/api/js?key=<%= ENV['GOOGLE_MAP_API'] %>&callback=initMap"></script>
 
@@ -194,7 +202,10 @@ function search() {
         <div class="map-search">
           <%= button_tag "ルート検索", id: "btn-search", class: "btn btn-primary", onclick:     "search()" %>
         </div>
+                        </div>
 
+        
+    <div class="comments ml-5 col-xs-6">
         <%= form_with(model:[@post, @comment], local: true) do |f| %>
         <%= f.text_area :comment, :size=>"60x3",placeholder: "コメントする" %>
         <%= f.submit "送信する", class: "btn btn-success mb-4" %>
@@ -205,17 +216,18 @@ function search() {
 	  <div class="comments-index mb-2">
           <%= comment.user.name %>
           <%= comment.created_at.strftime('%Y/%m/%d') %><br>
-      <div class="d-flex">
+      <%# <div class="d-flex"> %>
             <%= comment.comment %>
             <% if comment.user == current_user %>
             <div class="comment-delete">
               <%= link_to "削除", post_comment_path(comment.post, comment), method: :delete, class: "btn-sm btn-danger" %>
-            </div>
+            <%# </div> %>
             <% end %>
           </div>
         </div>
         <% end %>
-        <%= paginate @comments %>
+
+        <%= paginate @comments, theme: 'twitter-bootstrap-4' %>
       </div>
     </div>
 
