--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -15,7 +15,7 @@
           <%= render "relationships/relationship", user: @user %>
       </div>
     </p>
-    <div class="ml-3 mb-3 card w-100">
+    <div class="ml-3 mb-3 card">
     <div class="d-flex">
       <%= attachment_image_tag @user, :profile_image, size: '100x100', fallback: "no_image.png", class: "mb-3 profile-img" %>
       <h4 class="ml-3 mb-3 card w-100"><%= @user.profile %></h4>
@@ -42,6 +42,6 @@
       </div>
       <% end %>
     </div>
-    <%= paginate @posts %>
+    <%= paginate @posts, theme: 'twitter-bootstrap-4' %>
   </div>
 </div>
