--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -19,7 +19,7 @@
       </div>
       <div class="form-group">
         <label class="form-label">プロフィール画像</label><br>
-        <%= attachment_image_tag @user, :profile_image, size: '100x100', fallback: "no_image.png", class: "mb-3 profile-img" %><br>
+        <%= attachment_image_tag @user, :profile_image, size: '100x100', fallback: "logo.png", class: "mb-3 profile-img" %><br>
         <%= f.attachment_field :profile_image, placeholder: "プロフィール画像" %>
       </div>
       <div class="form-group">
