--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -13,6 +13,6 @@
       </div>
       <% end %>
     </div>
-    <%= paginate @users %>
+    <%= paginate @users, theme: 'twitter-bootstrap-4' %>
   </div>
 </div>
