--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,23 @@
-<h2>Forgot your password?</h2>
+<%= stylesheet_link_tag "signup", :media => "all" %>
+
+<div class="login-form">
+
+
+<h2>パスワードをお忘れの方</h2>
 
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+    <%= f.email_field :email, class:"login-email", autofocus: true, required: true, autocomplete: "email", placeholder: "Eメール" %>
 
   <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
+    <%= f.submit "パスワードをリセットする" %>
   </div>
 <% end %>
 
 <%= render "devise/shared/links" %>
+
+<div class="underlay-photo"></div>
+<div class="underlay-black"></div> 
+
+</div>
