--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,34 +1,34 @@
-<h2>Sign up</h2>
+<%= stylesheet_link_tag "signup", :media => "all" %>
+
+<div class="login-form">
+
+<h2>新規登録</h2>
 
   <%= form_with model: @user, url: user_registration_path, id: 'new_user', class: 'new_user', local: true do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name, autofocus: true %>
-  </div>
+    <%= f.text_field :name, class: "login-username", autofocus: true, required: true, autocomplete: "name", placeholder: "名前" %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+    <%= f.email_field :email, class:"login-email", autofocus: true, required: true, autocomplete: "email", placeholder: "Eメール" %>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
+    <%= f.password_field :password, class: "login-password", autofocus: true, autocomplete: "new-password", placeholder: "パスワード" %>
+        <% if @minimum_password_length %>
     <em>(<%= @minimum_password_length %> characters minimum)</em>
     <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
+    <%= f.password_field :password_confirmation, class: "login-password", autofocus: true, autocomplete: "new-password", placeholder: "パスワード（確認用）" %>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
+    <%= f.submit "新規登録", class: "login-submit"%>
+
+    <div class="box-newusr">
+      <p>↓登録済みの方はこちら↓</p>
+      <%= link_to "ログイン", new_user_session_path %>
+    </div>
+
 <% end %>
 
-<%= render "devise/shared/links" %>
+</div>
+
+
+<div class="underlay-photo"></div>
+<div class="underlay-black"></div> 
