--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -17,7 +17,7 @@
     </p>
     <div class="ml-3 mb-3 card">
     <div class="d-flex">
-      <%= attachment_image_tag @user, :profile_image, size: '100x100', fallback: "no_image.png", class: "mb-3 profile-img" %>
+      <%= attachment_image_tag @user, :profile_image, size: '100x100', fallback: "logo.png", class: "mb-3 profile-img" %>
       <h4 class="ml-3 mb-3 card w-100"><%= @user.profile %></h4>
     </div>
      <div class="d-flex">
