--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -67,7 +67,8 @@ h1 {
   height: 100%;
   width: 100%;
   background-image: url(/assets/show.jpg);
-  background-color: rgba(255, 255, 255, 0.4);
+  background-image: image-url('show.jpg'); 
+  background-color:rgba(255,255,255,0.4);
   background-blend-mode: lighten;
   background-size: 100% 100%;
   overflow: auto;
