--- a/app/assets/stylesheets/homes.scss
+++ b/app/assets/stylesheets/homes.scss
@@ -15,6 +15,7 @@ sub-title {
   width: 100%;
   display: table;
   background-image: url(/assets/home.jpg);
+  background-image: image-url('home.jpg'); 
   background-color:rgba(255,255,255,0.4);
   background-blend-mode:lighten;
   background-size: 100% 100%;
