--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -91,6 +91,7 @@ h1 {
   height: 100%;
   width: 100%;
   background-image: url(/assets/edit.jpg);
+  background-image: image-url('edit.jpg'); 
   background-color: rgba(255, 255, 255, 0.4);
   background-blend-mode: lighten;
   background-size: 100% 100%;
