--- a/app/assets/stylesheets/signup.scss
+++ b/app/assets/stylesheets/signup.scss
@@ -106,6 +106,7 @@ input {
 }
 .underlay-photo {
   background-image: url(/assets/signup.jpg);
+  background-image: image-url('signup.jpg'); 
   background-color:rgba(255,255,255,0.4);
   background-blend-mode:lighten;
   background-size: cover;
