fix:フォロー、フォロー一覧画面の修正

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -7,8 +7,12 @@
       <% @users.each do |user| %>
       <div class="one-post card w-100">
         <%= link_to user_path(user) do %>
-        <p class="caption h4"><%= user.name %></p>
-        <p class="caption"><%= "#{user.posts.count} 投稿" %></p>
+        <p class="caption h4 ml-2"><%= user.name %></p>
+        <div class="d-flex align-items-center">
+        <%= attachment_image_tag user, :profile_image, size: '80x80', fallback: "logo.png", class: "profile-img ml-1" %>
+        <h4 class="ml-2"><%= user.profile %></h4>
+        </div>
+        <p class="caption ml-3"><%= "#{user.posts.count} 投稿" %></p>
         <% end %>
       </div>
       <% end %>
