--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -12,12 +12,13 @@
   background-blend-mode: lighten;
   background-size: 100% 100%;
   overflow: auto;
+}
 
   h4 {
     font-size: 20px;
     border: none;
+    overflow-wrap: anywhere;
   }
-}
 
 // ユーザー覧
 .cover-user-index {
