--- a/app/views/users/followers.html.erb
+++ b/app/views/users/followers.html.erb
@@ -7,12 +7,12 @@
       <% @users.each do |user| %>
       <div class="one-post card w-100">
         <%= link_to user_path(user) do %>
-        <p class="caption h4"><%= user.name %></p>
+        <p class="caption h4 ml-2"><%= user.name %></p>
         <div class="d-flex">
-          <%= attachment_image_tag user, :profile_image, size: '50x50', fallback: "no_image.png", class: "mb-3 mt-3 ml-3 profile-img" %>
+        <%= attachment_image_tag user, :profile_image, size: '80x80', fallback: "logo.png", class: "profile-img ml-1" %>
           <h4 class="ml-5"><%= user.profile %></h4>
         </div>
-        <p class="caption"><%= "#{user.posts.count} 投稿" %></p>
+        <p class="caption ml-3"><%= "#{user.posts.count} 投稿" %></p>
         <% end %>
       </div>
       <% end %>
