fix:body要素がボトムバーに重ならず表示されるよう修正

--- a/app/assets/stylesheets/homes.scss
+++ b/app/assets/stylesheets/homes.scss
@@ -25,3 +25,9 @@ sub-title {
   display: table-cell;
   vertical-align: middle;
 }
+
+@media screen and (max-width: 575px){
+  .cover {
+    height: calc(100% + 66px);
+  }
+}
