--- a/app/views/users/follows.html.erb
+++ b/app/views/users/follows.html.erb
@@ -17,6 +17,6 @@
       </div>
       <% end %>
     </div>
-    <%= paginate @users %>
+    <%= paginate @users, theme: 'twitter-bootstrap-4' %>
   </div>
 </div>
