add:ゲストログイン機能の追加

--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -10,5 +10,8 @@
         <h2 class="btn btn-success ml-2">ログイン</h2>
       <% end %>  
     <% end %>  
+      <%= link_to users_guest_sign_in_path, method: :post do %>
+        <h2 class="btn btn-success ml-2">ゲストログイン</h2>
+      <% end %>  
   </div>
 </div>
