--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,9 +15,12 @@ body {
   display: none;
 }
 
+// flash
+.flash {
+  text-align: center;
+}
+
 // header
-
-
 header nav {
 	background: #000000;
 }
