add:カスタムバリデータの実装

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -7,16 +7,13 @@
   <%= form_with model: @user, url: user_registration_path, id: 'new_user', class: 'new_user', local: true do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
-    <%= f.text_field :name, class: "login-username", autofocus: true, required: true, autocomplete: "name", placeholder: "名前" %>
+    <%= f.text_field :name, class: "login-username", autofocus: true, autocomplete: "name", placeholder: "名前" %>
 
-    <%= f.email_field :email, class:"login-email", autofocus: true, required: true, autocomplete: "email", placeholder: "Eメール" %>
+    <%= f.text_field :email, class:"login-email", autofocus: true, autocomplete: "email", placeholder: "Eﾒｰﾙ" %>
 
-    <%= f.password_field :password, class: "login-password", autofocus: true, autocomplete: "new-password", placeholder: "パスワード" %>
-        <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
+    <%= f.text_field :password, class: "login-password", autofocus: true, autocomplete: "new-password", placeholder: "ﾊﾟｽﾜｰﾄﾞ(６文字以上)" %>
 
-    <%= f.password_field :password_confirmation, class: "login-password", autofocus: true, autocomplete: "new-password", placeholder: "パスワード（確認用）" %>
+    <%= f.text_field :password_confirmation, class: "login-password", autofocus: true, autocomplete: "new-password", placeholder: "ﾊﾟｽﾜｰﾄﾞ（確認用）" %>
 
     <%= f.submit "新規登録", class: "login-submit"%>
 
